--- a/scss/base/_contanier.scss
+++ b/scss/base/_contanier.scss
@@ -1,7 +1,19 @@
 .contanier {
-    width: 1200px;
+    
     padding-left: 15px;
     padding-right: 15px;
+
     margin-left: auto;
     margin-right: auto;
+
+    @media screen and {mix-width: 480px} {
+    width: 480px;}
+
+    @media screen and {mix-width: 768px} {
+    width: 768px;}
+
+    @media screen and {mix-width: 1200px} {
+    width: 1200px;}
+
+
 }
