--- a/css/main.css
+++ b/css/main.css
@@ -33,11 +33,28 @@ body {
 }
 
 .contanier {
-  width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
+}
+
+@media screen and (mix-width: 480px) {
+  .contanier {
+    width: 480px;
+  }
+}
+
+@media screen and (min-widht: 768px) {
+  .contanier {
+    width: 768px;
+  }
+}
+
+@media screen and (min-widht: 1200px) {
+  .contanier {
+    width: 1200px;
+  }
 }
 
 h1,
@@ -613,22 +630,63 @@ img {
   background-color: #1976d2;
 }
 
+.peculiarities {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+@media screen and (min-widht: 768px) {
+  .peculiarities {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
+
 .peculiarities__list-peculiarities {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  width: 1170px;
   margin-top: 0;
   margin-bottom: 0;
   padding-left: 0;
 }
 
+@media screen and (min-widht: 480px) {
+  .peculiarities__list-peculiarities {
+    display: block;
+    width: 480px;
+  }
+}
+
+@media screen and (min-widht: 768px) {
+  .peculiarities__list-peculiarities {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 768px;
+  }
+}
+
 .peculiarities__item-peculiarities {
-  width: 270px;
   margin-right: 30px;
   list-style-type: none;
+}
+
+@media screen and (min-widht: 480px) {
+  .peculiarities__item-peculiarities {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 450px;
+  }
+}
+
+@media screen and (min-widht: 768px) {
+  .peculiarities__item-peculiarities {
+    width: 354px;
+  }
 }
 
 .peculiarities__item-peculiarities:last-child {
@@ -645,67 +703,21 @@ img {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  width: 270px;
-  height: 120px;
   background-color: #F5F4FA;
   margin-bottom: 30px;
+  height: 120px;
 }
 
-.peculiarities__peculiarities__detali-icons {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  fill: #212121;
+@media screen and (min-widht: 480px) {
+  .peculiarities__peculiarities-icons {
+    width: 450px;
+  }
 }
 
-.peculiarities__attention-to-detail {
-  font-weight: 700;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: var(--title-text-color);
-  margin-top: 0px;
-  margin-bottom: 10px;
-}
-
-.peculiarities__punctuality {
-  font-weight: 700;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: var(--title-text-color);
-  margin-top: 0px;
-  margin-bottom: 10px;
-}
-
-.peculiarities__planning {
-  font-weight: 700;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: var(--title-text-color);
-  margin-top: 0px;
-  margin-bottom: 10px;
-}
-
-.peculiarities__modern-technologies {
-  font-weight: 700;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: var(--title-text-color);
-  margin-top: 0px;
-  margin-bottom: 10px;
-}
-
-.peculiarities__link-description {
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  color: var(--text-color);
-  margin-bottom: 0px;
+@media screen and (min-widht: 768px) {
+  .peculiarities__peculiarities-icons {
+    width: 354px;
+  }
 }
 
 .what-are-we-doing {
