--- a/scss/base/_contanier.scss
+++ b/scss/base/_contanier.scss
@@ -4,16 +4,24 @@
     padding-right: 15px;
 
     margin-left: auto;
-    margin-right: auto;
+    margin-right: auto; 
 
-    @media screen and {mix-width: 480px} {
-    width: 480px;}
-
-    @media screen and {mix-width: 768px} {
-    width: 768px;}
-
-    @media screen and {mix-width: 1200px} {
-    width: 1200px;}
-
-
+// mobile
+    @media screen and (mix-width: 480px) {
+            width: 480px;
+    }
+// tablet
+    @media screen and (min-widht: 768px) {
+        width: 768px;
+        
+    }
+// desctop
+    @media screen and (min-widht: 1200px) {
+        width: 1200px;
+        
+    }
+    
+        
 }
+
+
