--- a/scss/components/_peculiarities.scss
+++ b/scss/components/_peculiarities.scss
@@ -1,94 +1,150 @@
 .peculiarities {
-    // display: flex;
-    // flex-wrap: wrap;
-    // padding-top: 94px;
-    // padding-bottom: 94px;
+        padding-top: 60px;
+        padding-bottom: 60px;
+    
+    @include mq (tablet)  {
+        display: flex;
+        flex-wrap: wrap;
+
+        padding-top: 60px;
+        padding-bottom: 60px;
+   
+    }  
+    
+    @include mq (desctop) {
+        padding-top: 94px;
+        padding-bottom: 94px;
+    }
+  
+        
 
     &__list-peculiarities {
-        //     display: flex;
-        //     flex-wrap: wrap;
-        //     width: 1170px;
-        //     margin-top: 0;
-        //     margin-bottom: 0;
-        //     padding-left: 0;
-        // }
+            margin-top: 0;
+            margin-bottom: 0;
+            padding-left: 0;
+
+        @include mq (mobile) {
+            display: block;
+            width: 480px;
+
+        }
+        @include mq (tablet) {
+            display: flex;
+            width: 768px;
+        }
+
+
+        @include mq (desctop) {
+            display: flex;
+            flex-wrap: wrap;
+            width: 1170px;
+            
+        }
+        }
     
     &__item-peculiarities {
-        //     width: 270px;
-        //     margin-right: 30px;
-        //     list-style-type: none;
-        // }
+
+            margin-right: 30px;
+            list-style-type: none;
+
+        @include mq(mobile) {
+            display: flex;
+            width: 450px;
+        }
+        @include mq(tablet) {
+            width: 354px;
+        }
+        @include mq(desctop) {
+            width: 270px;
+
+        }    
+            
+        }
     
     &__item-peculiarities:last-child {
-            // margin-right: 0;
+            margin-right: 0;
         }
     
     &__peculiarities-icons {
-        //     display: flex;
-        //     align-items: center;
-        //     justify-content: center;
-        //     width: 270px;
-        //     height: 120px;
-        //     background-color: #F5F4FA;
-        //     margin-bottom: 30px;
-        // }
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background-color: #F5F4FA;
+            margin-bottom: 30px;
+            height: 120px;
+            
+
+            @include mq(mobile) {
+                width: 450px;
+                
+            }
+            @include mq(tablet) {
+                width: 354px;
+                
+            }
+            @include mq(desctop) {
+                width: 270px;
+                
+            }
+            
+        }
     
-    &__peculiarities__detali-icons {
-        //     display: flex;
-        //     align-items: center;
-        //     fill: #212121;
-        // }
+    // &__peculiarities__detali-icons {
+    //         display: flex;
+    //         align-items: center;
+    //         fill: #212121;
+    //     }
     
-    &__attention-to-detail {
-        //     font-weight: 700;
-        //     line-height: 1.14;
-        //     letter-spacing: 0.03em;
-        //     text-transform: uppercase;
-        //     color: var(--title-text-color);
-        //     margin-top: 0px;
-        //     margin-bottom: 10px;
+    // &__attention-to-detail {
+    //         font-weight: 700;
+    //         line-height: 1.14;
+    //         letter-spacing: 0.03em;
+    //         text-transform: uppercase;
+    //         color: var(--title-text-color);
+    //         margin-top: 0px;
+    //         margin-bottom: 10px;
     
-        // }
+    //     }
     
-    &__punctuality {
-        //     font-weight: 700;
-        //     line-height: 1.14;
-        //     letter-spacing: 0.03em;
-        //     text-transform: uppercase;
-        //     color: var(--title-text-color);
-        //     margin-top: 0px;
-        //     margin-bottom: 10px;
+    // &__punctuality {
+    //         font-weight: 700;
+    //         line-height: 1.14;
+    //         letter-spacing: 0.03em;
+    //         text-transform: uppercase;
+    //         color: var(--title-text-color);
+    //         margin-top: 0px;
+    //         margin-bottom: 10px;
     
-        // }
+    //     }
     
-    &__planning {
-        //     font-weight: 700;
-        //     line-height: 1.14;
-        //     letter-spacing: 0.03em;
-        //     text-transform: uppercase;
-        //     color: var(--title-text-color);
-        //     margin-top: 0px;
-        //     margin-bottom: 10px;
+    // &__planning {
+    //         font-weight: 700;
+    //         line-height: 1.14;
+    //         letter-spacing: 0.03em;
+    //         text-transform: uppercase;
+    //         color: var(--title-text-color);
+    //         margin-top: 0px;
+    //         margin-bottom: 10px;
     
-        // }
+    //     }
     
-    &__modern-technologies {
-        //     font-weight: 700;
-        //     line-height: 1.14;
-        //     letter-spacing: 0.03em;
-        //     text-transform: uppercase;
-        //     color: var(--title-text-color);
-        //     margin-top: 0px;
-        //     margin-bottom: 10px;
-        // }
+    // &__modern-technologies {
+    //         font-weight: 700;
+    //         line-height: 1.14;
+    //         letter-spacing: 0.03em;
+    //         text-transform: uppercase;
+    //         color: var(--title-text-color);
+    //         margin-top: 0px;
+    //         margin-bottom: 10px;
+    //     }
     
-    &__link-description {
-        //     line-height: 1.71;
-        //     letter-spacing: 0.03em;
-        //     color: var(--text-color);
-        //     margin-bottom: 0px;
+    // &__link-description {
+    //         line-height: 1.71;
+    //         letter-spacing: 0.03em;
+    //         color: var(--text-color);
+    //         margin-bottom: 0px;
     
-        // }
+    //     }
 
 
 }
