--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,6 @@
 @import './utils/vars';
 @import './utils/visuality-hidden';
+@import './utils/mixins';
 
 @import './base/common';
 @import './base/contanier';
