--- a/scss/components/_what-are-we-doing.scss
+++ b/scss/components/_what-are-we-doing.scss
@@ -15,6 +15,12 @@
             flex-wrap: wrap;
             padding-top: 0;
             padding-bottom: 94px;
+        @include mq(mobile)   {
+            display: none;
+        } 
+        @include mq(tablet) {
+            display: none;
+        }
         }
 }
 
