--- a/scss/components/_team.scss
+++ b/scss/components/_team.scss
@@ -15,7 +15,7 @@
 
     }
 
-    @include mq (desctop) {
+    @include mq (desktop) {
         padding-top: 94px;
         padding-bottom: 94px;
         
@@ -47,7 +47,7 @@
         
             }
         
-        @include mq (desctop) {
+        @include mq (desktop) {
                 font-weight: 700;
                 font-size: 36px;
                 line-height: 1.16;
@@ -72,77 +72,83 @@
     @include mq (tablet) {
         display: flex;
         flex-wrap: wrap;
-        // justify-content: space-around;
+        justify-content: center;
         padding: 0;
         margin-top: 0px;
         margin-bottom: 0px;
+        
 
     }
-    @include mq (desctop) {
+    @include mq (desktop) {
     display: flex;
     flex-wrap: wrap;
     padding: 0;
-    margin-top: 0px;
-    margin-bottom: 0px;
+    margin: -15px;
+    // margin-top: 0px;
+    // margin-bottom: 0px;
     }    
     
     &__member-item {
     @include mq (mobile) {
         background-color: #ffffff;
-        width: 450px;
         margin-bottom: 30px;
-        // height: 622px;
         box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
         border-radius: 0px 0px 4px 4px;
         list-style-type: none;
-        &:not(:last-child) {
-            margin-bottom: 30px;
+    //     &:not(:last-child) {
+    //         margin-bottom: 30px;
         }
 
-    }
+    // }
     @include mq (tablet) {
         // display: flex;
         // flex-wrap: wrap;
         background-color: #ffffff;
-        width: 354px;
-        margin-right: 30px;
+        
+        // margin-right: 30px;
         margin-bottom: 30px;
-        // height: 622px;
         box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
         border-radius: 0px 0px 4px 4px;
         list-style-type: none;
         &:not(:nth-child(2n)) {
                 margin-right: 30px;
-        }
+            }
+       
     }
-    @include mq (desctop) {
+    @include mq (desktop) {
             background-color: #ffffff;
-            margin-right: 30px;
+            margin: 15px;
             box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
             border-radius: 0px 0px 4px 4px;
             list-style-type: none;
+            flex-basis: calc(( 100% - 120px )/ 4);
+            &:not(:nth-child(2n)) {
+                    margin-right: 15px;
+                }
+          
     }
-    &__member-img {
-    @include mq (mobile) {
-        width: 450px;
-        height: 460px;
-    }
-    @include mq (tablet) {
-        width: 354px;
-        height: 374px;
-    }
-    @include mq (desctop) {
-        width: 270px;
-        height: 260px;
-    }
+    // &__member-img {
+    // @include mq (mobile) {
+    //     width: 100%;
+    //     height: 460px;
+        
+    // }
+    // @include mq (tablet) {
+    //     width: 100%;
+    //     height: 374px;
+    // }
+    // @include mq (desktop) {
+    //     width: 100%;
+    //     height: 260px;
+    // }
 
-    }
+    // }
 }
     
-    // &__member-item:last-child {
-    //         margin-right: 0;
+    &__member-item:last-child {
+            margin-right: 0;
     
-    //     }
+        }
     
     &__member-group {
         @include mq (mobile) {
@@ -153,7 +159,7 @@
             padding-top: 30px;
             padding-bottom: 24px;
         }
-        @include mq (desctop){
+        @include mq (desktop){
             padding-top: 30px;
             padding-bottom: 30px;
         }
@@ -256,4 +262,3 @@
     fill: #FFFFFF;
 
 }
-
