--- a/css/main.css
+++ b/css/main.css
@@ -936,6 +936,13 @@ img {
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .team {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
+
 @media screen and (min-width: 480px) {
   .team__our-team {
     font-weight: 700;
@@ -958,6 +965,19 @@ img {
     color: var(--title-text-color);
     margin-top: 0px;
     margin-bottom: 30px;
+    text-align: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team__our-team {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.16;
+    letter-spacing: 0.03em;
+    color: var(--title-text-color);
+    margin-top: 0px;
+    margin-bottom: 50px;
     text-align: center;
   }
 }
@@ -978,32 +998,41 @@ img {
     display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     padding: 0;
     margin-top: 0px;
     margin-bottom: 0px;
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .card {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    padding: 0;
+    margin: -15px;
+  }
+}
+
 @media screen and (min-width: 480px) {
   .card__member-item {
     background-color: #ffffff;
-    width: 450px;
     margin-bottom: 30px;
     -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
             box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
     list-style-type: none;
   }
-  .card__member-item:not(:last-child) {
-    margin-bottom: 30px;
-  }
 }
 
 @media screen and (min-width: 768px) {
   .card__member-item {
     background-color: #ffffff;
-    width: 354px;
-    margin-right: 30px;
     margin-bottom: 30px;
     -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
             box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -1015,18 +1044,24 @@ img {
   }
 }
 
-@media screen and (min-width: 480px) {
-  .card__member-item__member-img {
-    width: 450px;
-    height: 460px;
+@media screen and (min-width: 1200px) {
+  .card__member-item {
+    background-color: #ffffff;
+    margin: 15px;
+    -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+            box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+    list-style-type: none;
+    -ms-flex-preferred-size: calc(( 100% - 120px )/ 4);
+        flex-basis: calc(( 100% - 120px )/ 4);
+  }
+  .card__member-item:not(:nth-child(2n)) {
+    margin-right: 15px;
   }
 }
 
-@media screen and (min-width: 768px) {
-  .card__member-item__member-img {
-    width: 354px;
-    height: 374px;
-  }
+.card__member-item:last-child {
+  margin-right: 0;
 }
 
 @media screen and (min-width: 480px) {
@@ -1040,6 +1075,13 @@ img {
   .card__member-group {
     padding-top: 30px;
     padding-bottom: 24px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .card__member-group {
+    padding-top: 30px;
+    padding-bottom: 30px;
   }
 }
 
