--- a/css/main.css
+++ b/css/main.css
@@ -630,11 +630,9 @@ img {
   background-color: #1976d2;
 }
 
-@media screen and (min-width: 480px) {
-  .peculiarities {
-    padding-top: 60px;
-    padding-bottom: 60px;
-  }
+.peculiarities {
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 @media screen and (min-width: 768px) {
@@ -644,17 +642,31 @@ img {
     display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-    padding-top: 60px;
-    padding-bottom: 60px;
   }
+}
+
+@media screen and (min-width: 1200px) {
+  .peculiarities {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
+
+.peculiarities__list-peculiarities {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
 }
 
 @media screen and (min-width: 480px) {
   .peculiarities__list-peculiarities {
     display: block;
-    margin: 0;
-    padding: 0;
-    width: 480px;
+    width: 450px;
   }
 }
 
@@ -665,9 +677,24 @@ img {
     display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-    margin: 0;
-    padding: 0;
-    width: 768px;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    width: 738px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .peculiarities__list-peculiarities {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    width: 1170px;
   }
 }
 
@@ -677,16 +704,11 @@ img {
 
 @media screen and (min-width: 480px) {
   .peculiarities__item-peculiarities {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    margin-bottom: 30px;
     width: 450px;
-  }
-  .peculiarities__item-peculiarities:not(:last-child) {
     margin-bottom: 30px;
+  }
+  .peculiarities__item-peculiarities:last-child {
+    margin-bottom: 0px;
   }
 }
 
@@ -695,48 +717,68 @@ img {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     margin-right: 30px;
     margin-bottom: 30px;
     width: 354px;
   }
-  .peculiarities__item-peculiarities:not(:nth-child(2n)) {
+  .peculiarities__item-peculiarities:nth-child(2n) {
+    margin-right: 0px;
+  }
+  .peculiarities__item-peculiarities:nth-child(n + 3) {
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .peculiarities__item-peculiarities {
+    width: 270px;
     margin-right: 30px;
   }
+  .peculiarities__item-peculiarities:last-child {
+    margin-right: 0;
+  }
+  .peculiarities__item-peculiarities:nth-child(2n) {
+    margin-right: 30px;
+  }
+  .peculiarities__item-peculiarities:nth-child(-n + 3) {
+    margin-bottom: 0;
+  }
+}
+
+.peculiarities__peculiarities-icons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 120px;
+  background-color: #F5F4FA;
+  margin-bottom: 30px;
 }
 
 @media screen and (min-width: 480px) {
   .peculiarities__peculiarities-icons {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
     width: 450px;
-    height: 120px;
-    background-color: #F5F4FA;
-    margin-bottom: 30px;
   }
 }
 
 @media screen and (min-width: 768px) {
   .peculiarities__peculiarities-icons {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
     width: 354px;
-    height: 120px;
-    background-color: #F5F4FA;
-    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .peculiarities__peculiarities-icons {
+    width: 270px;
   }
 }
 
@@ -760,12 +802,6 @@ img {
   margin-bottom: 10px;
 }
 
-@media screen and (min-width: 480px) {
-  .peculiarities__attention-to-detail {
-    text-align: center;
-  }
-}
-
 .peculiarities__punctuality {
   font-weight: 700;
   line-height: 1.14;
@@ -774,12 +810,6 @@ img {
   color: var(--title-text-color);
   margin-top: 0px;
   margin-bottom: 10px;
-}
-
-@media screen and (min-width: 480px) {
-  .peculiarities__punctuality {
-    text-align: center;
-  }
 }
 
 .peculiarities__planning {
@@ -792,12 +822,6 @@ img {
   margin-bottom: 10px;
 }
 
-@media screen and (min-width: 480px) {
-  .peculiarities__planning {
-    text-align: center;
-  }
-}
-
 .peculiarities__modern-technologies {
   font-weight: 700;
   line-height: 1.14;
@@ -806,12 +830,6 @@ img {
   color: var(--title-text-color);
   margin-top: 0px;
   margin-bottom: 10px;
-}
-
-@media screen and (min-width: 480px) {
-  .peculiarities__modern-technologies {
-    text-align: center;
-  }
 }
 
 .peculiarities__link-description {
@@ -1038,6 +1056,9 @@ img {
             box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
     list-style-type: none;
+  }
+  .card__member-item:nth-child(n + 3) {
+    margin-bottom: 0;
   }
   .card__member-item:not(:nth-child(2n)) {
     margin-right: 30px;
